<resources>
    <string name="app_name">EmployeeManagement</string>
    <string name="NewEmployee">New Employee</string>
    <string name="ShowAll">Show All</string>
    <string name="UpdateEmployee" >Update Employee</string>
    <string name="DeleteEmployee">Delete Employee</string>
    <string name="ExportData">Export Data</string>
    <string name="ImportData">Import Data</string>
    <string name="EmployeeList">Employee List</string>
    <string name="tvNewEmployee">New Employee Info</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>

    <string name="enter_age">Enter Age</string>
    <string name="gender">Gender</string>
</resources>
