<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_img"
    android:backgroundTint="@color/colorFav"
    android:alpha="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mmh_49.employeemanagement.MainActivity">

    <Button
        android:id="@+id/btn_show_all"
        android:textSize="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/colorWhite"
        android:layout_width="171dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/border_button"
        android:text="@string/ShowAll"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/btn_new_employee"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:shadowDx="4" />

    <Button
        android:id="@+id/btn_new_employee"
        android:textSize="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/colorWhite"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/border_button"
        android:text="@string/NewEmployee"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_show_all"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:shadowDx="4" />

    <Button
        android:id="@+id/btn_delete_employee"
        android:textSize="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/colorWhite"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/border_button"
        android:text="@string/DeleteEmployee"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_employee" />

    <Button
        android:id="@+id/btn_update_employee"
        android:textSize="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/colorWhite"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/border_button"
        android:text="@string/UpdateEmployee"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_employee" />

    <Button
        android:id="@+id/btn_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="monospace"
        android:text="@string/ImportData"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete_employee"
        app:layout_constraintVertical_bias="0.688" />

    <Button
        android:id="@+id/btn_export"
        android:textSize="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_button"
        android:text="@string/ExportData"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_import"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete_employee"
        app:layout_constraintVertical_bias="0.688" />
</android.support.constraint.ConstraintLayout>
