<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/employee_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/employee_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/brown_border"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:scrollbars="vertical"
        android:weightSum="1">

        <Spinner
            android:id="@+id/employee_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/brown_border"
            android:hint="@string/gender"
            android:padding="12dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBorder"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_icon" />

            <Button
                android:id="@+id/upload_image"
                android:text="Upload Image"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>