<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorClicked"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/employee_image"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:src="@drawable/user_icon" />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/employee_name"
                android:layout_marginTop="12sp"
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:fontFamily="monospace"
                android:textSize="18sp"
                android:hint="@string/enter_name"
                android:shadowColor="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/employee_age"
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_below="@+id/employee_name"
                android:layout_weight="5"
                android:fontFamily="monospace"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:hint="@string/enter_number"
                android:shadowColor="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/employee_gender"
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_below="@+id/employee_age"
                android:layout_weight="5"
                android:layout_marginLeft="10dp"
                android:fontFamily="monospace"
                android:textSize="12sp"
                android:hint="@string/gender"
                android:shadowColor="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/edit_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:layout_marginRight="10dp"
            android:src="@drawable/edit_icon" />

        <ImageView
            android:id="@+id/delete_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:src="@drawable/delete_icon" />

    </LinearLayout>
</android.support.v7.widget.CardView>